tests/errors/variant_flow/flow_switch_in_loop_widens_variant_correctly.sim

            enum Option: Copy + Drop { None: unit Some: i64 }
            fn f(b: bool) {
              o: Option;
              entry:
                o = Option::None(unit);
                goto head
              head:
                switchEnum(o) [None: body, Some: dead]
              body:
                o = Option::Some(42);
                branch(copy b) [true: head, false: done]
              done:
                return
              dead: unreachable
            }
            